[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
chrono-tz = "0.10.3"
dotenvy = "0.15.7"
futures-core = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.45.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }

[features]
dev = []
